--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,52 +1,29 @@
-
-name: 部署文档
+name: Docs nanshuo
 
 on:
-  push:
-    branches:
-      - main
-
-permissions:
-  contents: write
+  - push
+  - pull_request
 
 jobs:
-  deploy-gh-pages:
+  test-docs:
+    name: nanshuo docs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          # submodules: true
 
-      - name: 设置 pnpm
+      - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          run_install: true
 
-
-      - name: 设置 Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 20.17.0
           cache: pnpm
 
-      - name: 安装依赖
-        run: |
-          corepack enable
-          pnpm install --frozen-lockfile
-
-      - name: 构建文档
+      - name: Build test
         env:
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          pnpm run docs:build
-          > src/.vuepress/dist/.nojekyll
-
-      - name: 部署文档
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          # 部署文档
-          branch: gh-pages
-          folder: src/.vuepress/dist
+          NODE_OPTIONS: --max_old_space_size=4096
+        run: pnpm docs:build
