--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.18",
-    "@vuepress/plugin-docsearch": "2.0.0-rc.57",
     "@vuepress/plugin-feed": "2.0.0-rc.57",
+    "@vuepress/plugin-search": "2.0.0-rc.55",
+    "aplayer": "^1.10.1",
     "kotlin-playground": "^1.30.0",
     "markmap-lib": "^0.17.2",
     "markmap-toolbar": "^0.17.2",
     "markmap-view": "^0.17.2",
     "sass-embedded": "^1.80.4",
+    "vidstack": "^1.12.12",
     "vue": "^3.5.12",
     "vuepress": "2.0.0-rc.18",
     "vuepress-theme-hope": "2.0.0-rc.59"
