--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vidstack": "^1.12.12",
     "vue": "^3.5.12",
     "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-readmore-popular-next": "2.0.0-rc.18.1",
     "vuepress-theme-hope": "2.0.0-rc.59"
   }
 }
